mobilenav-updates links, makes top sticky, sets isCollapsed correctly

--- a/src/app/shared/mobile-nav/mobile-nav.component.css
+++ b/src/app/shared/mobile-nav/mobile-nav.component.css
@@ -12,6 +12,7 @@
     position: fixed;
     left:0px;
     top:0px;
+    z-index: 2;
   }
 
   .mobile-hamburger:active {
