--- a/src/app/shared/nav-bar/nav-bar.styles.css
+++ b/src/app/shared/nav-bar/nav-bar.styles.css
@@ -47,3 +47,13 @@
   text-decoration: none;
 
 }
+
+
+/* Breakpoint for sticky mobile-nav */
+@media only screen and (max-width: 768px) {
+  nav {
+    position: sticky !important;
+    top: 0 !important;
+    z-index: 1 !important;
+  }
+}
